--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.0.0-beta4'
-    implementation 'io.reactivex:rxjava:1.1.3'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-
-    implementation 'com.github.Muxi-Studio:YAJB-Android:1.0'
+    // implementation 'io.reactivex:rxjava:1.1.3'
+    // implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    // implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    // implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
 }
